@@ -1,5 +1,8 @@
 2004-08-27  Brian Kahne  <bkahne@ibmoto.com>
 
+	* minicc:  Moved the spawn/result-vector code into a series of
+	templates in Interface.h.
+
 	* minicc:  Changed the architecture somewhat:  All code generation
 	data now resides within CodeGen:  Shared data is in an object
 	called SharedData and per-thread data is in ThreadData.  A new
